--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+glium = { version = "0.26", default-features = true }
+imgui = "0.3.0"
+imgui-glium-renderer = "0.3.0"
+imgui-winit-support = "0.3.0"
